--- a/result/2022-07-03.md
+++ b/result/2022-07-03.md
@@ -1,21 +1,21 @@
 1. [钟薛高31度室温下放1小时不化](https://s.weibo.com//weibo?q=%23%E9%92%9F%E8%96%9B%E9%AB%9831%E5%BA%A6%E5%AE%A4%E6%B8%A9%E4%B8%8B%E6%94%BE1%E5%B0%8F%E6%97%B6%E4%B8%8D%E5%8C%96%23&Refer=top) 2186990
-2. [父亲制止孩子哭闹掌掴孩子致死被判刑](https://s.weibo.com//weibo?q=%23%E7%88%B6%E4%BA%B2%E5%88%B6%E6%AD%A2%E5%AD%A9%E5%AD%90%E5%93%AD%E9%97%B9%E6%8E%8C%E6%8E%B4%E5%AD%A9%E5%AD%90%E8%87%B4%E6%AD%BB%E8%A2%AB%E5%88%A4%E5%88%91%23&Refer=top) 2015535
+2. [父亲制止孩子哭闹掌掴孩子致死被判刑](https://s.weibo.com//weibo?q=%23%E7%88%B6%E4%BA%B2%E5%88%B6%E6%AD%A2%E5%AD%A9%E5%AD%90%E5%93%AD%E9%97%B9%E6%8E%8C%E6%8E%B4%E5%AD%A9%E5%AD%90%E8%87%B4%E6%AD%BB%E8%A2%AB%E5%88%A4%E5%88%91%23&Refer=top) 2091044
 3. [钟薛高回应雪糕长时间不融化](https://s.weibo.com//weibo?q=%23%E9%92%9F%E8%96%9B%E9%AB%98%E5%9B%9E%E5%BA%94%E9%9B%AA%E7%B3%95%E9%95%BF%E6%97%B6%E9%97%B4%E4%B8%8D%E8%9E%8D%E5%8C%96%23&Refer=top) 1961007
 4. [逐梦青春筑梦未来](https://s.weibo.com//weibo?q=%23%E9%80%90%E6%A2%A6%E9%9D%92%E6%98%A5%E7%AD%91%E6%A2%A6%E6%9C%AA%E6%9D%A5%23&Refer=top) 1869102
 5. [广东汕头新增8例阳性](https://s.weibo.com//weibo?q=%23%E5%B9%BF%E4%B8%9C%E6%B1%95%E5%A4%B4%E6%96%B0%E5%A2%9E8%E4%BE%8B%E9%98%B3%E6%80%A7%23&Refer=top) 1412326
-6. [女子豆腐干内吃出手套遭厂家质疑](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E8%B1%86%E8%85%90%E5%B9%B2%E5%86%85%E5%90%83%E5%87%BA%E6%89%8B%E5%A5%97%E9%81%AD%E5%8E%82%E5%AE%B6%E8%B4%A8%E7%96%91%23&Refer=top) 889146
+6. [女子豆腐干内吃出手套遭厂家质疑](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E8%B1%86%E8%85%90%E5%B9%B2%E5%86%85%E5%90%83%E5%87%BA%E6%89%8B%E5%A5%97%E9%81%AD%E5%8E%82%E5%AE%B6%E8%B4%A8%E7%96%91%23&Refer=top) 889595
 7. [西安市新增1个高风险区和3个中风险区](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E5%B8%82%E6%96%B0%E5%A2%9E1%E4%B8%AA%E9%AB%98%E9%A3%8E%E9%99%A9%E5%8C%BA%E5%92%8C3%E4%B8%AA%E4%B8%AD%E9%A3%8E%E9%99%A9%E5%8C%BA%23&Refer=top) 867376
 8. [3人非法传播2.3万部付费影视剧被抓](https://s.weibo.com//weibo?q=%233%E4%BA%BA%E9%9D%9E%E6%B3%95%E4%BC%A0%E6%92%AD2.3%E4%B8%87%E9%83%A8%E4%BB%98%E8%B4%B9%E5%BD%B1%E8%A7%86%E5%89%A7%E8%A2%AB%E6%8A%93%23&Refer=top) 820244
 9. [美国一母亲长期喂婴儿果蔬致其饿死](https://s.weibo.com//weibo?q=%23%E7%BE%8E%E5%9B%BD%E4%B8%80%E6%AF%8D%E4%BA%B2%E9%95%BF%E6%9C%9F%E5%96%82%E5%A9%B4%E5%84%BF%E6%9E%9C%E8%94%AC%E8%87%B4%E5%85%B6%E9%A5%BF%E6%AD%BB%23&Refer=top) 773623
 10. [新一解说](https://s.weibo.com//weibo?q=%E6%96%B0%E4%B8%80%E8%A7%A3%E8%AF%B4&Refer=top) 708609
 11. [20万现金放纸箱被老人当废品卖了](https://s.weibo.com//weibo?q=%2320%E4%B8%87%E7%8E%B0%E9%87%91%E6%94%BE%E7%BA%B8%E7%AE%B1%E8%A2%AB%E8%80%81%E4%BA%BA%E5%BD%93%E5%BA%9F%E5%93%81%E5%8D%96%E4%BA%86%23&Refer=top) 440338
-12. [男子地铁车厢内抽烟还称得了新冠](https://s.weibo.com//weibo?q=%23%E7%94%B7%E5%AD%90%E5%9C%B0%E9%93%81%E8%BD%A6%E5%8E%A2%E5%86%85%E6%8A%BD%E7%83%9F%E8%BF%98%E7%A7%B0%E5%BE%97%E4%BA%86%E6%96%B0%E5%86%A0%23&Refer=top) 423630
+12. [男子地铁车厢内抽烟还称得了新冠](https://s.weibo.com//weibo?q=%23%E7%94%B7%E5%AD%90%E5%9C%B0%E9%93%81%E8%BD%A6%E5%8E%A2%E5%86%85%E6%8A%BD%E7%83%9F%E8%BF%98%E7%A7%B0%E5%BE%97%E4%BA%86%E6%96%B0%E5%86%A0%23&Refer=top) 427808
 13. [流浪狗仰头喝雨水过路男子带回养](https://s.weibo.com//weibo?q=%23%E6%B5%81%E6%B5%AA%E7%8B%97%E4%BB%B0%E5%A4%B4%E5%96%9D%E9%9B%A8%E6%B0%B4%E8%BF%87%E8%B7%AF%E7%94%B7%E5%AD%90%E5%B8%A6%E5%9B%9E%E5%85%BB%23&Refer=top) 380094
 14. [中国台北球员锁脖中国球员毫无歉意](https://s.weibo.com//weibo?q=%23%E4%B8%AD%E5%9B%BD%E5%8F%B0%E5%8C%97%E7%90%83%E5%91%98%E9%94%81%E8%84%96%E4%B8%AD%E5%9B%BD%E7%90%83%E5%91%98%E6%AF%AB%E6%97%A0%E6%AD%89%E6%84%8F%23&Refer=top) 324711
 15. [汕头新增8例核酸阳性](https://s.weibo.com//weibo?q=%23%E6%B1%95%E5%A4%B4%E6%96%B0%E5%A2%9E8%E4%BE%8B%E6%A0%B8%E9%85%B8%E9%98%B3%E6%80%A7%23&Refer=top) 310749
 16. [黛灰](https://s.weibo.com//weibo?q=%E9%BB%9B%E7%81%B0&Refer=top) 302260
-17. [西安新增1例本土确诊病例](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E6%96%B0%E5%A2%9E1%E4%BE%8B%E6%9C%AC%E5%9C%9F%E7%A1%AE%E8%AF%8A%E7%97%85%E4%BE%8B%23&Refer=top) 283652
-18. [高诗岩](https://s.weibo.com//weibo?q=%E9%AB%98%E8%AF%97%E5%B2%A9&Refer=top) 277732
+17. [高诗岩](https://s.weibo.com//weibo?q=%E9%AB%98%E8%AF%97%E5%B2%A9&Refer=top) 292065
+18. [西安新增1例本土确诊病例](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E6%96%B0%E5%A2%9E1%E4%BE%8B%E6%9C%AC%E5%9C%9F%E7%A1%AE%E8%AF%8A%E7%97%85%E4%BE%8B%23&Refer=top) 283652
 19. [WBG对战TES](https://s.weibo.com//weibo?q=%23WBG%E5%AF%B9%E6%88%98TES%23&Refer=top) 270558
 20. [黑河女生俄罗斯留学距家仅500m](https://s.weibo.com//weibo?q=%23%E9%BB%91%E6%B2%B3%E5%A5%B3%E7%94%9F%E4%BF%84%E7%BD%97%E6%96%AF%E7%95%99%E5%AD%A6%E8%B7%9D%E5%AE%B6%E4%BB%85500m%23&Refer=top) 262441
 21. [太古里的兔子被抓走了](https://s.weibo.com//weibo?q=%23%E5%A4%AA%E5%8F%A4%E9%87%8C%E7%9A%84%E5%85%94%E5%AD%90%E8%A2%AB%E6%8A%93%E8%B5%B0%E4%BA%86%23&Refer=top) 260454
@@ -39,3 +39,4 @@
 39. [你还在为肚子上的赘肉烦恼吗](https://s.weibo.com//weibo?q=%23%E4%BD%A0%E8%BF%98%E5%9C%A8%E4%B8%BA%E8%82%9A%E5%AD%90%E4%B8%8A%E7%9A%84%E8%B5%98%E8%82%89%E7%83%A6%E6%81%BC%E5%90%97%23&Refer=top) 117623
 40. [女子称民警拦截电诈是关心过头](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E7%A7%B0%E6%B0%91%E8%AD%A6%E6%8B%A6%E6%88%AA%E7%94%B5%E8%AF%88%E6%98%AF%E5%85%B3%E5%BF%83%E8%BF%87%E5%A4%B4%23&Refer=top) 105285
 41. [青海湖湟鱼跃起洄游](https://s.weibo.com//weibo?q=%23%E9%9D%92%E6%B5%B7%E6%B9%96%E6%B9%9F%E9%B1%BC%E8%B7%83%E8%B5%B7%E6%B4%84%E6%B8%B8%23&Refer=top) 98490
+42. [没想到结个婚还挺废人](https://s.weibo.com//weibo?q=%23%E6%B2%A1%E6%83%B3%E5%88%B0%E7%BB%93%E4%B8%AA%E5%A9%9A%E8%BF%98%E6%8C%BA%E5%BA%9F%E4%BA%BA%23&Refer=top) 68281
